# k8ostester

./: .coverage  .dockerignore  .gitignore  .trivyignore  .trivyignore.yaml  LICENSE  README.md  instructions.md  k8ost-docker  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  image-scan.yml  release.yml
docs/: architecture-restructure.md  architecture.md  decisions.md  plan.md  productionization.md  remote-control.md  runbooks.md  tour.md  usage.md
docs/tour/: capture.mjs  capture.sh
experiments/examples/nginx-smoke/: experiment.yaml
experiments/postgres-cnpg/05-cnpg-pgbouncer/: experiment.yaml
experiments/postgres-cnpg/07-cnpg-ha-pooler-storm-tuned/: experiment.yaml
experiments/postgres-cnpg/10-cnpg-ha-pooler-storm-partition/: experiment.yaml
experiments/postgres-cnpg/11-cnpg-ha-pooler-storm-partition-tuned/: experiment.yaml
experiments/postgres-cnpg/12-cnpg-ha-pooler-storm-partition-balanced/: experiment.yaml
experiments/postgres-cnpg/13-cnpg-ha-pooler-storm-partition-ready/: experiment.yaml
experiments/postgres-cnpg/16-cnpg-dr-drill/: experiment.yaml
experiments/postgres-cnpg/17-cnpg-dr-drill-sync-first/: experiment.yaml
infra/monitoring/: kps-values.yaml  perses-values.yaml
k8os-testbed/: README.md  flow.py
k8os-testbed/kind/: kind-az.yaml
k8os-testbed/manifests/: 01-seaweedfs.yaml  02-cluster.yaml  03-app.yaml
k8os-testbed/monitoring/: grafana.yaml  prometheus.yaml
k8ostester/: cli.py
k8ostester-core/: .dockerignore  Dockerfile  README.md  pyproject.toml
k8ostester-core/src/k8ostester/cli/: __init__.py  app.py  clean.py  env.py  live.py  report.py  run.py  session.py  tui.py
k8ostester-core/src/k8ostester/core/: capabilities.py  events.py  exceptions.py  experiment.py  goals.py  helm.py  infra.py  k8s.py  metrics.py  report.py  resources.py  runner.py  session.py
k8ostester-core/src/k8ostester/drivers/: __init__.py  base.py
k8ostester-core/src/k8ostester/resources/: network-delay.yaml  network-partition-policy.yaml  report.html
k8ostester-core/src/k8ostester/resources/infra/seaweedfs/: seaweedfs.yaml
k8ostester-core/src/k8ostester/technologies/postgres_cnpg/: driver.py  loadgen.Dockerfile  loadgen.py
k8ostester-core/src/k8ostester/technologies/postgres_cnpg/resources/: loadgen-deployment.yaml  loadgen-job.yaml  pgbench-job.yaml
k8ostester-core/src/k8ostester/workers/: base.py  network.py  node_drain.py  pod_kill.py  process_kill.py
k8ostester-core/tests/: conftest.py  test_cli.py  test_session.py  test_tui.py
k8ostester-core/tests/core/: test_capabilities.py  test_events.py  test_exceptions.py  test_experiment.py  test_goals.py  test_helm.py  test_infra.py  test_k8s.py  test_metrics.py  test_report.py  test_resources.py  test_runner.py
k8ostester-core/tests/drivers/: test_cnpg_driver.py  test_driver_resolution.py  test_drivers.py
k8ostester-core/tests/technologies/: test_cnpg_loadgen.py
k8ostester-core/tests/workers/: test_network_workers.py  test_pod_workers.py  test_worker_resolution.py
k8ostester/core/: capabilities.py  events.py  exceptions.py  experiment.py  goals.py  helm.py  infra.py  k8s.py  metrics.py  report.py  resources.py  runner.py
k8ostester/drivers/: __init__.py  base.py  generic.py
k8ostester/resources/: network-loss.yaml  network-partition.yaml  report.html
k8ostester/workers/: __init__.py  base.py  node_drain.py  pod_kill.py
kernel/: pyproject.toml
kernel/console/: README.md  grafana.yaml  prometheus.yaml
kernel/src/k8ostester_kernel/: __init__.py  capabilities.py  chaos.py  control.py  exceptions.py  experiment.py  k8s.py  verdict.py
kernel/tests/: conftest.py  test_capabilities.py  test_chaos.py  test_control.py  test_experiment.py  test_k8s.py  test_verdict.py
pg/: README.md  console.Dockerfile  pyproject.toml
pg/deploy/: console-lab.yaml  console.yaml  rbac-clusterwide.yaml
pg/deploy/helm/k8ost-console/: Chart.yaml  README.md  values.yaml
pg/deploy/helm/k8ost-console/templates/: NOTES.txt  _helpers.tpl  basicauth-secret.yaml  deployment.yaml  httproute.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
pg/experiments/kill-primary/: run.py
pg/experiments/kill-replica/: run.py
pg/experiments/partition-primary/: run.py
pg/src/k8ostester_pg/: __init__.py  builder.py  console.html  control.py  dashboard.py  discover.py  execute.py  goals.py  harness.py  ops.py  registry.py  server.py  slo.py
pg/src/k8ostester_pg/resources/: cluster-backup.tmpl.yaml  cluster-monitoring.tmpl.yaml  cluster-roles.tmpl.yaml  cluster-sync.tmpl.yaml  cluster.tmpl.yaml  custom-queries.tmpl.yaml  dashboard.tmpl.json  otel-collector.tmpl.yaml  pooler.tmpl.yaml  prometheus-rule.tmpl.yaml  prometheus-rules.tmpl.yaml  role-secret.tmpl.yaml  scheduledbackup.tmpl.yaml
pg/src/k8ostester_pg/resources/dashboard/: activity.json  archive-failures.json  archiving.json  backups.json  cache-hit.json  checkpoints.json  conn-age.json  conn-health.json  connections-by-role.json  connections.json  cpu.json  db-size.json  disk.json  flags.json  long-txn.json  memory.json  replication-lag.json  replication-slots.json  restarts.json  txid-age.json  up.json  wal.json
pg/testbed/: README.md  flow.py
pg/testbed/manifests/: 02-cluster.yaml
pg/testbed/manifests/az/: spread.yaml
pg/tests/: test_builder.py  test_control.py  test_discover.py  test_execute.py  test_harness.py  test_ops.py  test_registry.py  test_server.py  test_slo.py
technologies/postgres-cnpg/: driver.py  loadgen.Dockerfile  loadgen.py
tests/: conftest.py  test_cli.py  test_core.py
tests/core/: test_capabilities.py  test_exceptions.py  test_experiment.py  test_goals.py  test_helm.py  test_infra.py  test_k8s.py  test_metrics.py  test_report.py  test_resources.py  test_runner.py
tests/drivers/: test_cnpg_driver.py  test_driver_resolution.py  test_drivers.py
tests/technologies/: conftest.py  test_cnpg_loadgen.py
tests/workers/: conftest.py  test_network_workers.py  test_pod_workers.py  test_worker_resolution.py
(+72 files in other folders)
