[project]
name = "k8ostester"
version = "0.1.0"
description = "Validate Kubernetes configurations of stateful technologies against resilience and performance goals"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "kubernetes>=31.0",
    "pydantic>=2.9",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["k8ostester"]

[project.scripts]
k8ost = "k8ostester.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester"]
