[project]
name = "k8ostester"
version = "0.1.0"
description = "Validate Kubernetes configurations of stateful technologies against resilience and performance goals"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["kubernetes", "resilience", "chaos", "postgres", "cloudnative-pg"]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "kubernetes>=31.0",
    "pydantic>=2.9",
    "PyYAML>=6.0",
    "textual>=8.2.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length — the formatter's job, not the linter's
    "B008",   # function-call defaults are how typer declares CLI options/args
    "UP042",  # str+Enum is intentional (typer choice enums)
    "UP047",  # TypeVar generics are fine; not migrating to PEP 695 syntax
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
timeout = 120

[tool.coverage.run]
source = ["k8ostester"]

[project.scripts]
k8ost = "k8ostester.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester"]
