[project]
name = "k8ostester-kernel"
version = "0.1.0"
description = "Shared primitives for k8ostester verticals: k8s access, chaos primitives, the metrics console, and the SLO-query verdict"
requires-python = ">=3.14"
dependencies = []   # the SLO-verdict helper is stdlib-only (urllib)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
