[project]
name = "k8ostester-kernel"
version = "0.2.1"
description = "Shared primitives for k8ostester verticals: k8s access, chaos primitives, the metrics console, and the SLO-query verdict"
requires-python = ">=3.14"
dependencies = [
    "kubernetes>=31.0",   # the k8s client + chaos primitives; verdict stays stdlib
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
