[project]
name = "k8ostester-pg"
version = "0.1.0"
description = "PostgreSQL/CloudNativePG vertical: the production-readiness testbed, SLO checks, and (later) linear experiment scripts"
requires-python = ">=3.14"
dependencies = [
    "k8ostester-kernel",   # k8s client, chaos primitives, SLO-verdict helper
]

[tool.uv.sources]
k8ostester-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester_pg"]
artifacts = [
  "src/k8ostester_pg/console.html",        # the SPA served by the console
  "src/k8ostester_pg/resources/*.tmpl.yaml",  # manifest-builder templates
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
