[project]
name = "k8ostester-pg"
version = "0.1.0"
description = "PostgreSQL/CloudNativePG vertical: the k8ost-console control plane, the production-readiness testbed, SLO checks, and linear experiment scripts"
requires-python = ">=3.14"
dependencies = [
    "k8ostester-kernel",   # k8s client, chaos primitives, SLO-verdict helper
    "pyyaml>=6.0",         # manifest parse/emit in the console (server.py)
]

[project.scripts]
k8ost-console = "k8ostester_pg.server:main"

[tool.uv.sources]
k8ostester-kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8ostester_pg"]
artifacts = [
  "src/k8ostester_pg/console.html",           # the SPA served by the console
  "src/k8ostester_pg/resources/*.tmpl.yaml",  # manifest-builder templates
  "src/k8ostester_pg/resources/*.tmpl.json",  # dashboard envelope
  "src/k8ostester_pg/resources/dashboard/*.json",  # dashboard panels
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
